# pip-installable-cli

./: README.md  pyproject.toml
src/pi/: main.py
