[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A simple CLI tool for calculating pi."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm"
]

[project.scripts]
pi = "pi.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pi"]